[package]
name = "comfyUI-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
handlebars = "4.5.0"
reqwest = {version = "0.11.22", features = ["json"]}
tokio = { version = "1.34.0", features = ["full"]}
tungstenite = "0.20.1"
url = "2.2.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.5"

[dependencies.uuid]
version = "1.6.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]